Fix dark mode styling on progress tab notes field

--- a/src/dark-mode/index.styl
+++ b/src/dark-mode/index.styl
@@ -80,7 +80,8 @@ html[bslp-dark]
 		navigation,
 		listGroupItem,
 		announcementContainer,
-		progressFeedLineStopIcon 
+		progressFeedLineStopIcon,
+		progressNoteTextArea 
 	)}
 		background-color: dark700 !important
 
@@ -104,7 +105,8 @@ html[bslp-dark]
 		rangeContainer,
 		rangeLower,
 		standardizedTestScoreGoalEmpty,
-		progressFeedLineGrayIcon
+		progressFeedLineGrayIcon,
+		progressNoteCancelButton
 	)}
 		background-color: dark400 !important
 
@@ -158,7 +160,8 @@ html[bslp-dark]
 		dropdownItem,
 		goalModalText,
 		checkboxListGroup,
-		progressFeedLineGrayIcon
+		progressFeedLineGrayIcon,
+		progressNoteCancelButton
 	)}
 		color: lightSecondary !important
 
@@ -188,7 +191,8 @@ html[bslp-dark]
 		composer,
 		dropdown,
 		progressWeekSection,
-		progressFeedLineStopIcon 
+		progressFeedLineStopIcon,
+		progressNoteCancelButton
 	)}
 		border-color: darkDivide !important
 	
